--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <!--  Quote  -->
             <div class="quote-text">
                 <i class="fas fa-quote-left"></i>
-                <span id="quote">If you can imagine it, you can achieve it. If you can dream it, you can become it.</span>
+                <span id="quote"></span>
             </div>
 
         <!--  Author  -->
         <div class="quote-author">
-            <span id="author">William Arthur Ward</span>
+            <span id="author"></span>
         </div>
         <!--  Button  -->
         <div class="button-container">
@@ -26,6 +26,6 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
