Add a loader to show app is thinking

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <!--  Loader  -->
+    <div class="loader" id="loader"></div>
     <script src="script.js"></script>
 </body>
 </html>
